--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -14,7 +14,7 @@ html,body{ height:100%; }
 .menu-box{ height:40px; background:#99245C; line-height:40px; text-align:center;}
 .menu-box li{ float:left; width:25%;}
 .menu-box li{ color:#eee;}
-.menu-box li.cur{ color:#fff; font-weight:bold;}
+.menu-box li.cur{ color:#2D6299; font-weight:bold; }
 
 .title{ padding:5px; }
 
